--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "delimiter-stream": "^3.0.1",
     "highland": "^2.13.5",
     "jszip": "^3.5.0",
-    "jtf-lib": "file:../../jtf-lib",
+    "jtf-lib": "https://github.com/cdli-gh/jtf-lib",
     "localforage": "^1.9.0",
     "normalizr": "^3.6.1",
     "react": "^17.0.1",
     "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
     "react-dropzone-uploader": "^2.11.0",
+    "react-input-autosize": "^3.0.0",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.1",
     "react-virtualized": "^9.22.2",
