--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ace-builds": "^1.4.12",
+    "axios": "^0.21.1",
     "delimiter-stream": "^3.0.1",
     "highland": "^2.13.5",
     "jszip": "^3.5.0",
