--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "uqnu",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "homepage": "/uqnu",
   "dependencies": {
+    "@iconify-icons/mdi": "^1.1.13",
+    "@iconify/react": "^1.1.4",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -32,6 +34,7 @@
   },
   "scripts": {
     "start": "HOST=0.0.0.0 PORT=3002 react-scripts start",
+    "start-pc": "set HOST=0.0.0.0&&set PORT=3002&& react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
