--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-input-autosize": "^3.0.0",
     "react-redux": "^7.1.3",
-    "react-scripts": "4.0.1",
-    "react-virtualized": "^9.22.2",
+    "react-scripts": "^4.0.3",
+    "react-virtualized": "^9.22.3",
     "readable-web-to-node-stream": "^3.0.0",
     "zip": "^1.2.0"
   },
