--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uqnu",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "private": true,
   "homepage": "/uqnu",
   "dependencies": {
@@ -53,5 +53,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3003"
 }
